css/main.css
/*fun*/
@import url('https://fonts.googleapis.com/css?family=Roboto+Mono');
* {
	font-family: 'Roboto Mono', sans-serif;
}
.heading,
.heading *,
.subheading,
.subheading * {
	font-family: 'Roboto Mono', serif;
}.footer,
.header {
	background: #FFFFFF;
	background-image: linear-gradient(-138deg,#ECE9E6 14%,#FFFFFF 100%);
}
.ctas-button {
	color: #fff;
}@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,700');
*,
*:before,
*:after {
  margin: 0;
  box-sizing: border-box;
}
body {
  -webkit-font-smoothing: antialiased;
}
/*text*/
.heading {
  font-weight: normal;
  font-size: 32px;
}
@media (max-width: 900px) {
.heading {
    font-size: 24px;
  }
}
.subheading {
  font-size: 24px;
  font-weight: normal;
}
@media (max-width: 900px) {
  .subheading {
    font-size: 24px;
  }
}
.paragraph {
  font-size: 14px;
  line-height: 1.7;
  font-weight: 300;
}
.heading + .paragraph {
  margin-top: 24px;
}
.subheading + .paragraph {
  margin: 10px 0 24px;
}
p.paragraph {
  color: rgba(0,0,0,.5);
}
.logo {
	display: inline-block;
	width: auto;
	height: 36px;
	margin: 0 0 8px;
}
.logo img {
	max-height: 36px;
	max-width: 100%;
}
@media (max-width: 420px) {
  .logo {
    height: 32px;
  }
	.logo img {
		max-height: 32px;
	}
}
.nav-link2,
.nav-link {
  text-decoration: none;
  font-size: 14px;
  line-height: 2;
  color: inherit;
}
.nav-link:not(:first-of-type) {
  margin-left: 20px;
}
.text-center {
  text-align: center;
}
.text-right {
  text-align: right;
}
/*flexbox styles*/
.flex,
.spread,
.center,
.right,
.vertical,
.centervertical {
  display: flex;
}
.spread {
  justify-content: space-between;
}
.center {
  align-items: center;
  justify-content: center;
}
.centervertical {
  flex-direction: column;
  justify-content: center;
}
.right {
  justify-content: flex-end;
}
.vertical {
  flex-direction: column;
}
/*grid*/
.col-1,
.col-2,
.col-3,
.col-4,
.col-5,
.col-6,
.col-7,
.col-8,
.col-9,
.col-10,
.col-11,
.col-12 {
  padding: 0 20px;
}
.col-1 {width: 8.333333%;}
.col-2 {width: 16.666667%;}
.col-3 {width: 25%;}
.col-4 {width: 33.333333%;}
.col-5 {width: 41.666667%;}
.col-6 {width: 50%;}
.col-7 {width: 58.333333%;}
.col-8 {width: 66.666667%;}
.col-9 {width: 75%;}
.col-10 {width: 83.333333%;}
.col-11 {width: 91.666667%;}
.col-12 {width: 100%;}

/*containers*/
.container-lrg,
.container-sml {
  margin: auto;
  width: 100%;
}
.container-lrg {
  max-width: 1080px;
}
.container-sml {
  max-width: 700px;
}
.ctas {
  margin: 40px 0 0 0;
}
.centerdevices,
.sidedevices {
  position: relative;
}.header {
	padding: 20px 0 60px 0;
	overflow: hidden;
}
.header .sidedevices {
	margin: 60px 0 0
}
@media (max-width: 900px) {
	.header .sidedevices {
		min-height: inherit;
	}
	.header .flex {
		flex-direction: column;
	}
	.header	.heading {
		margin-top: 60px;
	}
	.header	.col-6 {
		width: 100%;
	}
}
.ctas-input {
	color: rgba(0,0,0,.5);
	outline: none;
	border: none;
	border-radius: 3px;
	font-size: 15px;
	height: 40px;
	line-height: 40px;
	padding: 0 15px;
	width: 260px;
	display: inline-block;
	background-color: rgba(0,0,0,.12);
}
::-webkit-input-placeholder { /* WebKit, Blink, Edge */
  color: #fff;
	opacity: .8;
}
:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
	color: #fff;
	opacity: .8;
}
::-moz-placeholder { /* Mozilla Firefox 19+ */
	color: #fff;
	opacity: .8;
}
:-ms-input-placeholder { /* Internet Explorer 10-11 */
	color: #fff;
	opacity: .8;
}
::-ms-input-placeholder { /* Microsoft Edge */
	color: #fff;
	opacity: .8;
}
.ctas-button {
	display: inline-block;
	margin: 0 0 0 10px;
	height: 40px;
	line-height: 38px;
	padding: 0 30px;
	background: #1CC886;
	border-radius: 2px;
	font-size: 14px;
	font-weight: 600;
	text-transform: uppercase;
	letter-spacing: .3px;
	outline: none;
	border: none;
	text-decoration: none;
}
@media (max-width: 440px) {
	.ctas-input,
	.ctas-button {
		display: block;
		width: 100%;
		text-align: center;
	}
	.ctas-button {
		margin: 10px 0 0 0;
	}
}.socialproof {
	padding: 90px 0;
}
.testimonial-content {
	margin-top: 15px;
}
.testimonial {
	margin-top: 40px;
	border-radius: 3px;
	padding: 20px;
	border: 1px solid rgba(0,0,0,.1);
	min-height: 130px;
}
@media (max-width: 750px) {
  .socialproof .emoji {
    font-size: 40px;
  }
  .testimonial {
  	min-height: inherit;
  }
  .socialproof .flex {
  	flex-wrap: wrap;
  }
  .socialproof .col-4:nth-of-type(1) {
  	width: 100%;
  }
  .socialproof .col-4:not(:nth-of-type(1)) {
  	width: 50%;
  }
}
@media (max-width: 500px) {
	.socialproof .col-4:nth-of-type(1) {
		margin-bottom: 0;
	}
  .socialproof .col-4:not(:nth-of-type(1)) {
  	width: 100%;
  }
}.ctas-button,
.ctas-button-2 {
	display: inline-block;
	height: 40px;
	line-height: 38px;
	padding: 0 30px;
	background: #1CC886;
	border-radius: 3px;
	font-size: 14px;
	font-weight: 600;
	text-transform: uppercase;
	letter-spacing: .3px;
	outline: none;
	border: none;
	text-decoration: none;
}
.ctas-button-2 {
	background: transparent;
	color: white;
	margin: 0 0 0 10px;
}
@media (max-width: 440px) {
	.ctas-button,
	.ctas-button-2 {
		display: block;
		width: 100%;
		text-align: center;
	}
	.ctas-button-2 {
		margin: 10px 0 0 0;
	}
}.footer {
	padding: 90px 0 45px;
}
.footer .footer-nav {
	padding-top: 90px;
	flex-wrap: wrap;
}
.footer .nav-link {
	display: inline-block;
	margin: 0 10px;
}
@media(max-width: 700px) {
	.footer .footer-nav .col-3 {
		width: 50%;
	}
}
@media(max-width: 500px) {
	.footer .footer-nav .col-3 {
		width: 100%;
	}
}

@media (max-width: 440px) {
	.ctas-input,
	.ctas-button {
		display: block;
		width: 100%;
		text-align: center;
	}
	.ctas-button {
		margin: 10px 0 0 0;
	}
}.feature5 {
	padding: 90px 0;
	overflow: hidden;
	border-bottom: 1px solid rgba(0,0,0,.1);
}
.feature5 .sidedevices {
	margin-top: 90px;
}
.feature5 .emoji {
	width: 44px;
	height: 44px;
	margin-bottom: 8px;
	position: absolute;
	transform: translate3d(calc(-100% - 20px),0,0);
	/*delete this*/
	min-width: inherit;
	z-index: 9999;
}
.feature5 .emoji b {
	font-size: 34px;
}
.feature5 .steps:not(:last-of-type) {
	margin-bottom: 20px;
}
@media (max-width: 900px) {
	.feature5 .header-images {
		min-height: inherit;
		margin-top: 60px;
	}
	.feature5 .heading {
		margin-bottom: 48px;
	}
	.feature5 .flex {
		flex-direction: column;
	}
	.feature5 .centervertical {
		flex-direction: row;
	}
	.feature5 .steps {
		width: 33.33%;
		padding: 0 20px;
	}
	.feature5 .emoji {
		transform: none;
		position: relative;
	}
	.feature5	.col-5,
	.feature5	.col-6 {
		width: 100%;
	}
}
@media (max-width: 750px) {
  .feature5 .centervertical {
  	flex-wrap: wrap;
  }
  .feature5 .steps:nth-of-type(1) {
  	width: 100%;
  	margin-bottom: 30px;
  }
  .feature5 .steps:not(:nth-of-type(1)) {
  	width: 50%;
  }
}
@media (max-width: 500px) {
	.feature5 .steps:nth-of-type(1) {
		margin-bottom: 0;
	}
  .feature5 .steps:not(:nth-of-type(1)) {
  	width: 100%;
  	margin-top: 30px;
  }
}.feature3 {
	padding: 90px 0;
	border-bottom: 1px solid rgba(0,0,0,.1);
}
.feature3 .emoji {
	font-size: 34px;
	display: block;
	margin-bottom: 16px;
	color: black
}
@media (max-width: 750px) {
  .feature3 .emoji {
    font-size: 40px;
  }
  .feature3 .flex {
  	flex-wrap: wrap;
  }
  .feature3 .col-4:nth-of-type(1) {
  	width: 100%;
  	margin-bottom: 30px;
  }
  .feature3 .col-4:not(:nth-of-type(1)) {
  	width: 50%;
  }
}
@media (max-width: 500px) {
	.feature3 .col-4:nth-of-type(1) {
		margin-bottom: 0;
	}
  .feature3 .col-4:not(:nth-of-type(1)) {
  	width: 100%;
  	margin-top: 30px;
  }
}

